--- a/TSN.Numerics/TSN.Numerics.csproj
+++ b/TSN.Numerics/TSN.Numerics.csproj
@@ -5,28 +5,28 @@
 	</PropertyGroup>
 
 	<PropertyGroup>
-		<MajorMinorBuildVersion>1.0.4</MajorMinorBuildVersion>
-		<VersionRevision>$([System.Math]::Truncate($([MSBuild]::Multiply(10, $([System.DateTime]::Now.ToUniversalTime().Subtract(2022-09-01).TotalHours)))))</VersionRevision>
+		<MajorMinorBuildVersion>1.0.5</MajorMinorBuildVersion>
+		<VersionRevision>$([System.Math]::Truncate($([MSBuild]::Multiply(10, $([System.DateTime]::Now.ToUniversalTime().Subtract(2022-09-17).TotalHours)))))</VersionRevision>
 		<AssemblyVersion>$(MajorMinorBuildVersion).$(VersionRevision)</AssemblyVersion>
 		<FileVersion>$(AssemblyVersion)</FileVersion>
 		<Version>$(AssemblyVersion)</Version>
 		<InformationalVersion>$(AssemblyVersion)</InformationalVersion>
 		<Company>www.mustafatosun.net</Company>
-		<Authors>Mustafa TOSUN</Authors>
-		<Copyright>Copyright © Mustafa TOSUN, 2022.</Copyright>
+		<Authors>MUSTAFA TOSUN</Authors>
+		<Copyright>Copyright © MUSTAFA TOSUN, 2022.</Copyright>
 		<Description>A library that presents a wrapper structure named 'Numeric' which can contain different types of numbers.</Description>
 		<Title>$(AssemblyName)</Title>
 		<Product>$(AssemblyName)</Product>
 		<SignAssembly>False</SignAssembly>
-		<PackageProjectUrl>https://github.com/mtosun07/TSN.Numerics</PackageProjectUrl>
-		<RepositoryUrl>$(PackageProjectUrl)</RepositoryUrl>
+		<PackageProjectUrl>https://mustafatosun.net</PackageProjectUrl>
+		<RepositoryUrl>https://github.com/mtosun07/TSN.Numerics</RepositoryUrl>
 		<RepositoryType>git</RepositoryType>
 		<PackageId>$(AssemblyName)</PackageId>
 		<GeneratePackageOnBuild>True</GeneratePackageOnBuild>
 		<PackageTags>numeric;number;wrap;wrapper;integer;complex;maths;mathematics;convert;sbyte;byte;short;ushort;int16;uint16;int;uint;int32;uint32;long;ulong;int64;uint64;half;float;single;double;decimal</PackageTags>
 		<PackageIcon>icon.png</PackageIcon>
 		<PackageReadmeFile>README.md</PackageReadmeFile>
-		<PackageReleaseNotes>Critical fix for numbers of type Complex</PackageReleaseNotes>
+		<PackageReleaseNotes>Fixes the integer division that was resulting as truncated; also, dividing by zero won't throw exception anymore. Added TryConvertTo methods as well as support to some of System.Math methods.</PackageReleaseNotes>
 	</PropertyGroup>
 
 	<ItemGroup>
