--- a/TSN.Numerics/TSN.Numerics.csproj
+++ b/TSN.Numerics/TSN.Numerics.csproj
@@ -5,7 +5,7 @@
 	</PropertyGroup>
 
 	<PropertyGroup>
-		<MajorMinorBuildVersion>1.0.5</MajorMinorBuildVersion>
+		<MajorMinorBuildVersion>1.0.6</MajorMinorBuildVersion>
 		<VersionRevision>$([System.Math]::Truncate($([MSBuild]::Multiply(10, $([System.DateTime]::Now.ToUniversalTime().Subtract(2022-09-17).TotalHours)))))</VersionRevision>
 		<AssemblyVersion>$(MajorMinorBuildVersion).$(VersionRevision)</AssemblyVersion>
 		<FileVersion>$(AssemblyVersion)</FileVersion>
@@ -26,7 +26,7 @@
 		<PackageTags>numeric;number;wrap;wrapper;integer;complex;maths;mathematics;convert;sbyte;byte;short;ushort;int16;uint16;int;uint;int32;uint32;long;ulong;int64;uint64;half;float;single;double;decimal</PackageTags>
 		<PackageIcon>icon.png</PackageIcon>
 		<PackageReadmeFile>README.md</PackageReadmeFile>
-		<PackageReleaseNotes>Fixes the integer division that was resulting as truncated; also, dividing by zero won't throw exception anymore. Added TryConvertTo methods as well as support to some of System.Math methods.</PackageReleaseNotes>
+		<PackageReleaseNotes>Critical bug fixes</PackageReleaseNotes>
 	</PropertyGroup>
 
 	<ItemGroup>
